# liquidglass

./: .gitattributes  .gitignore  README.md  settings.gradle.kts
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/blur/: NativeGaussTest.kt
app/src/androidTest/java/com/example/liquidglass/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  boxblur.cpp  boxblur.h  chromatic_aberration.cpp  chromatic_aberration.h  gauss_iir.cpp  gauss_iir.h  gauss_iir_neon.cpp  gauss_iir_neon.h  native-lib.cpp
app/src/main/java/com/example/blur/: BenchmarkActivity.kt  MainActivity.kt  NativeGauss.kt
app/src/main/java/com/example/liquidglass/: AdvancedFastBlur.kt  AsyncRenderer.kt  BackdropBlurEffect.kt  BitmapPool.kt  BlurMethod.kt  ChromaticAberrationEffect.kt  ChromaticDispersionEffect.kt  DispersionMapGenerator.kt  DisplacementMapGenerator.kt  EdgeDistortionEffect.kt  EdgeHighlightEffect.kt  EffectTestActivity.kt  EnhancedBlurEffect.kt  EnhancedDemoActivity.kt  FixedGlassContainer.kt  LiquidGlassDemoActivity.kt  LiquidGlassView.kt  NativeChromaticAberration.kt  NativeChromaticDispersion.kt  ProfessionalDemoActivity.kt  ScrollableTestActivity.kt  SimpleTestActivity.kt
app/src/main/res/drawable/: demo_background.xml  gradient_background_1.xml  gradient_background_2.xml  gradient_background_3.xml  gradient_background_4.xml  image_placeholder.xml
app/src/main/res/layout/: activity_enhanced_demo.xml  activity_liquid_glass_demo.xml  activity_simple_test.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/example/liquidglass/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
